Ignore upy compiled modules
Signed-off-by: Christopher Arndt <chris@chrisarndt.de>

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
+# MicroPython pre-compiled module files
+*.mpy
 
 # C extensions
 *.so
