Move mrequests into its own repo and re-add it as a sub-module
Signed-off-by: Christopher Arndt <chris@chrisarndt.de>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "picoredis"]
 	path = picoredis
 	url = https://github.com/SpotlightKid/picoredis.git
+[submodule "mrequests"]
+	path = mrequests
+	url = https://github.com/SpotlightKid/mrequests
